--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Etch-A-Sketch</title>
-        <link rel="stylesheet" href="style.css">
-        <script src="javascript.js" defer></script>
-    </head>
-    <body>
-        <div id="container">
-            
-        </div>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <title>Etch-A-Sketch</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="javascript.js" defer></script>
+</head>
+
+<body>
+    <button id="btn">Change grid size</button>
+    <br>
+    <br>
+    <div id="container">
+
+    </div>
+</body>
+
 </html>
