Add color change feature to header

--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Etch-A-Sketch</title>
-        <link rel="stylesheet" href="style.css">
-        <script src="javascript.js" defer></script>
-    </head>
-    <body>
-        <button id="btn">Change grid size</button>
-        <br>
-        <br>
-        <div id="container">
-        </div>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Etch-A-Sketch</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="javascript.js" defer></script>
+  </head>
+  <body>
+    <h1>Etch-yo-Sketch!!</h1>
+    <button id="btn">Change grid size</button>
+    <div id="container"></div>
+  </body>
 </html>
